20071109 ui/{gtk/gtkui.c,win32/win32ui.c},ui.c: move #include "tape.h" to
	 where it's needed.
20071109 ui/fb/{fbdisplay.c,fbmouse.c}: fix warnings (Stuart).
20071111 if1.[ch],menu.[ch],menu_data.dat,ui/ui.h,ui.c,utils.c: rewrite
	 Microdrive cartridge insertion/ejection code (fixes bugs #1828225 and
	 1828984) (Stuart).
20071111 disk/disk.[ch]: remove 'filename' member of disk_t (Stuart).
20071112 menu_data.pl,ui/win32/{menu_data.[ch],menu_data.rc}: update menu data
	 for the Win32 UI (Stuart).
20071112 menu_data.pl: remove dead code (Stuart).
20071112 hacking/tc2048_tech_notes.txt,machines/{tc2048.c,tc2068.c}: contention
         tweak for TC2048 and TC2068 based on test programs from Phil and
         Mark Woodmass (Fred).
20071112 machines/pentagon.c: revert spec128 memory port change arising from
         Pentagon 512 and Pentagon 1024 emulation merge (patch #1774492), as it
         breaks the Eyeache 2 demo at least (fixes bug #1829280) (Fred).
20071115 if1.c: unformatted Microdrive cartridge fixes (patch #1769451)
	 (Gergely Szasz).
20071115 disk/plusd.c,z80/z80_ops.c: activate +D on reset and when executing
	 at 0x028e (KEY-SCAN) (Stuart Brady).
20071117 disk/plusd.c: ensure we get a prototype for memset (Fred).
20071117 if2.c, machine.c: fix loading Interface II ROMs (thanks, Stuart Brady)
	 (Fred).
20071118 sound/sdlsound.c: don't use power of two sound buffers on Amiga
         (more of patch #1712260) (Chris Young).
20071118 menu.c,menu_data.dat: simplify menu_media_disk_{insert,eject} action
	 encoding (thanks, Gergely) (Stuart).
20071119 ui/win32/{Makefile.am,menu_data.c,menu_data.h,menu_data.rc}: remove
	 pregenerated Win32 menu data, and a add phony target to generate the
	 Win32 menu data (Stuart).
20071119 disk/wd_fdc.c: clear busy status for a read address command when no
	 address mark is found (part of patch #1834231) (Gergely Szasz).
20071119 disk/{beta.c,wd_fdc.[ch]}: intrq/datarq fixes (more of patch #1834231)
	 (Gergely Szasz).